refactor: keep human and machine detected object in same table